[project]
name = "pdf2md"
version = "0.1.0"
description = "PDF to Markdown translation tool using PaddleOCR and DeepSeek"
readme = "README.md"
authors = [
    { name = "jimingSu", email = "231880303@smail.nju.edu.cn" }
]
requires-python = ">=3.14"
dependencies = [
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rich>=13.0.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"
